kubernetes/ingress/superset_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset-ingress
  labels:
    app.kubernetes.io/name: superset-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
    - hosts:
        - example.com
      secretName: superset-cert-secret
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superset-clusterip-service
                port:
                  name: http
